@@ -40,8 +40,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2005-2018 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2005-2018 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.08
