@@ -66,8 +66,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2005-2018 Michal Josef Špaček
- BSD 2-Clause License
+© 2005-2018 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION 
 
